--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
