--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsc cd ../client && npm install && npm run build"
+    "build": "tsc && cd ../client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
